[package]
name = "cotim_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.2.2", features = ["derive"] }
prettyplease = "0.2.4"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
sv-parser = "0.13.1"

[dev-dependencies]
assert_cmd = "2.0.11"
tempfile = "3.5.0"
