[package]
name = "cotim_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.5.60", features = ["derive"] }
prettyplease = "0.2.37"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
sv-parser = "0.13.4"

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile = "3.26.0"
